fix some visual on smaller screens, add leg for the shelf

--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -3,13 +3,14 @@
 .main-page-container {
   text-align: center;
   height: 100%;
-  width: 100vw;
+  width: 690px;
+  margin: 0 5vw;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   .table-container {
-    max-width: 90vw;
-
+    width: inherit;
     .custom-table {
       border: 10px solid #a86440;
       background-color: #4d2a19;
@@ -22,6 +23,10 @@
           1px -1px 0 #000,
           -1px 1px 0 #000,
           1px 1px 0 #000;
+      }
+
+      th:last-of-type {
+        width: 50px;
       }
 
       tbody tr:not(:last-child) {
@@ -100,7 +105,7 @@
   }
   .button-container {
     display: flex;
-    width: 90vw;
+    width: inherit;
     .custom-button {
       a {
         display: flex;
@@ -131,6 +136,17 @@
           margin: 10px 0 0 0;
         }
       }
+    }
+  }
+  .table-footer {
+    width: calc(100% - 20px);
+    display: flex;
+    justify-content: space-between;
+    .trapezium {
+      width: 40px;
+      height: 30px;
+      background-color: #a86440;
+      clip-path: polygon(0 0, 100% 0, 80% 100%, 20% 100%);
     }
   }
 }
